# konpu

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  konpu.toml
.github/workflows/: ci.yml
docs/: call-graph-provider-design.md  layer2-call-graph-design.md  layer3-decidability-limits.md  roadmap.md
konpu-cg/: Cargo.toml
konpu-cg/src/: facts.rs  graph.rs  lib.rs  scip_extract.rs
konpu-macros/: Cargo.toml
konpu-macros/src/: lib.rs
konpu-macros/tests/: ui.rs
konpu-macros/tests/ui/: fail_group_missing_inverse.rs  fail_group_missing_inverse.stderr  fail_identity_eq_op.rs  fail_identity_eq_op.stderr  fail_ignore_bad_reason.rs  fail_ignore_bad_reason.stderr  fail_ignore_missing_reason.rs  fail_ignore_missing_reason.stderr  fail_monoid_missing_identity.rs  fail_monoid_missing_identity.stderr  fail_unknown_law.rs  fail_unknown_law.stderr  pass_group.rs  pass_ignore.rs  pass_law.rs  pass_monoid.rs  pass_semigroup.rs
models/: konpu.als
src/: lib.rs  main.rs
src/analyze/: baseline.rs  call_graph.rs  call_graph_kotlin.rs  call_graph_swift.rs  check.rs  directive.rs  extract.rs  extract_kotlin.rs  extract_swift.rs  extract_ts.rs  infer.rs  mod.rs  module_graph.rs  parser.rs  preserve_cg.rs  propagation.rs  scaffold.rs
src/analyze/call_graph/: engine.rs  kotlin.rs  mod.rs  swift.rs  ts.rs
src/analyze/extract/: kotlin.rs  mod.rs  rust.rs  swift.rs  ts.rs
src/analyze/fixtures/: closure_violation.rs  confidence_info.rs  domain_thing.rs  functor_sig_violation.rs  group_missing_inverse.rs  higher_mismatch.rs  infra_thing.rs  law_test_missing.rs  (+8 more)
src/domain/: fixtures.rs  mod.rs  newtypes.rs  tests.rs
tests/: analyze_integration.rs
(+21 files in other folders)
