[package]
name = "konpu"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
konpu-macros = { path = "konpu-macros" }
tree-sitter = "0.25"
tree-sitter-rust = "0.24.2"
tree-sitter-swift = "0.7.3"
tree-sitter-kotlin-ng = "1.1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
konpu-cg = { path = "konpu-cg", optional = true }
tree-sitter-typescript = "0.23.2"

[features]
default = []
call-graph = ["dep:konpu-cg", "konpu-cg/scip"]

[workspace]
members = ["konpu-macros", "konpu-cg"]
resolver = "3"
